--- a/package.json
+++ b/package.json
@@ -11,15 +11,29 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "26.5.0"
   },
   "devDependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^27.0.1",
     "@types/react": "17.0.20",
+    "@types/react-test-renderer": "^17.0.1",
     "autoprefixer": "^10.3.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "jest": "26.6.3",
     "postcss": "^8.3.6",
+    "stylelint-config-recommended": "^5.0.0",
     "tailwindcss": "^2.2.15",
-    "typescript": "4.4.3"
+    "ts-loader": "^9.2.5",
+    "tsconfig-paths": "^3.11.0",
+    "typescript": "4.4.3",
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0"
   }
 }
