--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "ts-jest": "26.5.0"
   },
   "devDependencies": {
-    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/enzyme": "^3.10.9",
     "@types/jest": "^27.0.1",
     "@types/react": "17.0.20",
     "@types/react-test-renderer": "^17.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "autoprefixer": "^10.3.4",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
