--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-test-renderer": "^17.0.2",
+    "rfdc": "^1.3.0",
     "ts-jest": "26.5.0"
   },
   "devDependencies": {
